--- a/lambda/package.json
+++ b/lambda/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "azure-iot-common": "^1.1.3",
     "azure-iothub": "^1.1.3",
-    "debug": "^2.6.0"
+    "debug": "^2.6.0",
+    "uuid": "^3.0.1"
   }
 }
