--- a/cli/package.json
+++ b/cli/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "azure-iot-common": "^1.1.3",
     "azure-iothub": "^1.1.3",
-    "commander": "^2.9.0"
+    "babel-preset-es2017": "^6.22.0",
+    "babel-register": "^6.22.0",
+    "commander": "^2.9.0",
+    "qs": "^6.3.0"
   }
 }
